--- a/indexmodalides2.html
+++ b/indexmodalides2.html
@@ -90,13 +90,124 @@
                         <div class="p-2 bg-body-tertiary rounded-top">
                             <p class="fw-semibold">Inscrições</p>
                         </div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class='d-flex justify-content-between p-2 border-bottom'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4-2.svg">
+                                <div>
+                                    <p class="open-s fw-semibold">Dan Goiás</p>
+                                    <small class="open-s"><strong>INFO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <div>
+                                    <small class="open-s tag text-success bg-success-subtle">Confirmado</small>
+                                    <small>1h</small>
+                                </div>
+                                <div>
+                                    <button class="btn btn-outline-dark btn-sm">Detalhes</button>
+                                    <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='d-flex justify-content-between p-2 border-bottom'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4.svg">
+                                <div>
+                                    <p class="open-s fw-semibold">Davi Lu</p>
+                                    <small class="open-s"><strong>COMÉRCIO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <small id="tag-aguar" class="open-s tag">Aguardando aceite</small>
+                                <div>
+                                    <button class="btn btn-outline-dark btn-sm">Detalhes</button>
+                                    <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='d-flex justify-content-between p-2 border-bottom'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4-3.svg">
+                                <div>
+                                    <p class="open-s fw-semibold">Edi Jr</p>
+                                    <small class="open-s"><strong>COMÉRCIO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <small id="tag-aguar" class="open-s tag">Aguardando aceite</small>
+                                <div>
+                                    <button class="btn btn-outline-dark btn-sm">Detalhes</button>
+                                    <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='d-flex justify-content-between p-2 border-bottom'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4-4.svg">
+                                <div>
+                                    <p class="open-s fw-semibold">Mr Cruz</p>
+                                    <small class="open-s"><strong>INFO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <small id="tag-aguar" class="open-s tag">Aguardando aceite</small>
+                                <div>
+                                    <button class="btn btn-outline-dark btn-sm">Detalhes</button>
+                                    <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='d-flex justify-content-between p-2 border-bottom'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4-5.svg">
+                                <div>
+                                    <p class="open-s fw-semibold text-body-tertiary">Carl Late</p>
+                                    <small class="open-s text-body-tertiary"><strong>ELETRO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <small class="tag text-white bg-secondary"><em class="open-s">Expirado</em></small>
+                                <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                            </div>
+                        </div>
+                        <div class='d-flex justify-content-between p-2 border-bottom'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4-6.svg">
+                                <div>
+                                    <p class="open-s fw-semibold">Rick Lopes</p>
+                                    <small class="open-s"><strong>INFO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <div>
+                                    <small class="open-s tag text-success bg-success-subtle">Confirmado</small>
+                                    <small>1h</small>
+                                </div>
+                                <div>
+                                    <button class="btn btn-outline-dark btn-sm">Detalhes</button>
+                                    <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='d-flex justify-content-between p-2'>
+                            <div class="d-flex gap-2 align-items-center">
+                                <img src="assets/img/Ellipse 4-7.svg">
+                                <div>
+                                    <p class="open-s fw-semibold">Té Obalde</p>
+                                    <small class="open-s"><strong>ELETRO</strong> | Categorias: 4x50m revezamento livre</small>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column justify-content-end align-items-end gap-1">
+                                <div>
+                                    <small class="open-s tag text-success bg-success-subtle">Confirmado</small>
+                                    <small>1h</small>
+                                </div>
+                                <div>
+                                    <button class="btn btn-outline-dark btn-sm">Detalhes</button>
+                                    <button class="btn btn-outline-dark btn-sm">Excluir</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
