--- a/indexmodalides4.html
+++ b/indexmodalides4.html
@@ -69,21 +69,31 @@
                         <img src="assets/img/icon.svg">
                         <p>Detalhamento da modalidade</p>
                     </div>
-                    <h5 class="pb-2 fw-semibold border-bottom">Natação</h5>
+                    <h5 class="pb-2 fw-semibold border-bottom">Categorias de modalidade</h5>
                 </div>
                 <section class="d-flex gap-3 mt-3">
-                    <div id="modal" class="card d-flex flex-column gap-3 border p-2">
-                        <figure class="pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
+                    <div id="modal" class="card d-flex flex-column gap-3 border p-2 py-3">
+                        <figure class="mb-0 pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
                         <div>
-                            <p>Tipo</p>
+                            <p class="fw-bold-600">Tipo</p>
                             <small id="tipo">Individual</small>
                         </div>
                         <div>
-                            <p>Inscrições</p>
+                            <p class="fw-bold-600">Inscrições</p>
                             <small>0 Atletas</small>
                         </div>
-                        <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
+                        <a id="link-card" class="pt-3 border-top" href="#">Cadastrar</a>
                     </div>
+                    <div class="d-flex flex-column h-100 rounded-5">
+                        <div class="p-2 border border-bottom-0">Categorias</div>
+                        <div class="p-2 border border-bottom-0">50m borboleta</div>
+                        <div class="p-2 border border-bottom-0">50m Costas</div>
+                        <div class="p-2 border border-bottom-0">50m Livre</div>
+                        <div class="p-2 border border-bottom-0">50m peito</div>
+                        <div class="p-2 border border-bottom-0">100m livre</div>
+                        <div class="p-2 border border-bottom-0">4x50m medley</div>
+                        <div class="p-2 border">4x50m revezamento livre</div>
+                      </div>
                 </section>
             </div>
         </div>
