--- a/indexmodalides2.html
+++ b/indexmodalides2.html
@@ -74,14 +74,14 @@
                     <h5 class="pb-2 fw-semibold border-bottom">Natação</h5>
                 </div>
                 <section class="d-flex gap-3 mt-3">
-                    <div id="modal" class="card d-flex flex-column gap-3 border p-2">
-                        <figure class="pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
+                    <div id="modal" class="card d-flex flex-column gap-3 border p-2 py-3">
+                        <figure class="mb-0 pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
                         <div>
-                            <p>Tipo</p>
+                            <p class="fw-bold-600">Tipo</p>
                             <small id="tipo">Individual</small>
                         </div>
                         <div>
-                            <p>Inscrições</p>
+                            <p class="fw-bold-600">Inscrições</p>
                             <small>0 Atletas</small>
                         </div>
                         <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
