--- a/indexmodalides4.html
+++ b/indexmodalides4.html
@@ -67,7 +67,9 @@
                     <div class="d-flex gap-2">
                         <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
                         <img src="assets/img/icon.svg">
-                        <p>Detalhamento da modalidade</p>
+                        <a id="home" class="link-underline link-underline-opacity-0" href="#">Natação</a>
+                        <img src="assets/img/icon.svg">
+                        <p>Categorias</p>
                     </div>
                     <h5 class="pb-2 fw-semibold border-bottom">Categorias de modalidade</h5>
                 </div>
@@ -84,16 +86,40 @@
                         </div>
                         <a id="link-card" class="pt-3 border-top" href="#">Cadastrar</a>
                     </div>
-                    <div class="d-flex flex-column h-100 rounded-5">
-                        <div class="p-2 border border-bottom-0">Categorias</div>
-                        <div class="p-2 border border-bottom-0">50m borboleta</div>
-                        <div class="p-2 border border-bottom-0">50m Costas</div>
-                        <div class="p-2 border border-bottom-0">50m Livre</div>
-                        <div class="p-2 border border-bottom-0">50m peito</div>
-                        <div class="p-2 border border-bottom-0">100m livre</div>
-                        <div class="p-2 border border-bottom-0">4x50m medley</div>
-                        <div class="p-2 border">4x50m revezamento livre</div>
-                      </div>
+                    <ul class='col-8 list-group d-flex flex-column justify-content-between border-1'>
+                        <li class='list-group-item d-flex justify-content-between bg-body-secondary'>
+                            <p class='fw-bold'>Categoria</p>
+                            <p class='fw-bold w-25'>Ocupação</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between'>
+                            <p>50m borboleta</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between '>
+                            <p>50m Costas</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between'>
+                            <p>50m Livre</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between'>
+                            <p>50m peito</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between'>
+                            <p>100m livre</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between'>
+                            <p>4x50m medley</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                        <li class='list-group-item d-flex justify-content-between'>
+                            <p>4x50m revezamento livre</p>
+                            <p class='w-25'>15/20</p>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </div>
