--- a/Cadastrar-modalidade.html
+++ b/Cadastrar-modalidade.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modalidades</title>
+    <title>Cadastramento de Modalidade</title>
 
     <!-- bootstrap do projeto -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,17 +18,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
 
     <!-- css do projeto -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    
 </head>
 
 <body class="h-100 gambiarra">
@@ -66,37 +64,54 @@
         <div class="col-10 mt-2">
             <div class="container padeiro">
                 <div id="label" class="d-flex flex-column gap-3 mb-2">
-                    <div class="d-flex gap-2">
+                    <div class="bread-crumb d-flex gap-2">
                         <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
                         <img src="assets/img/icon.svg">
-                        <p>Detalhamento da modalidade</p>
+                        <p>Cadastro</p>
                     </div>
-                    <h5 class="pb-2 fw-semibold border-bottom">Natação</h5>
+                    <h5 class="cadastramento-categoria pb-2 fw-semibold border-bottom">Cadastramento de Modalidade</h5>
                 </div>
-                <section class="d-flex gap-3 mt-3">
-                    <div id="modal" class="card d-flex flex-column gap-3 border p-2">
-                        <figure class="pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
-                        <div>
-                            <p>Tipo</p>
-                            <small id="tipo">Individual</small>
+                <section class="d-flex mt-3">
+                    <div class="col-6">
+                        <form class="formulario-pg-dez p-4 border rounded">
+                            <div class="col-8 pb-3">
+                                <label for="receber" class="form-label fw-semibold">Nome</label>
+                                <input id="receber" type="text" class="form-control" placeholder="Digite o nome da modalidade">
+                            </div>
+                            <label for="receber" class="form-label fw-semibold pb-2">Tipo</label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                  Coletiva
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                  Individual
+                                </label>
+                            </div>
+                            <label for="receber" class="form-label fw-semibold pt-3">Ícone da modalidade</label>
+                            <div class="select col-4">
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Selecione</option>
+                                    <option value="1">🏊</option>
+                                    <option value="2">🏐</option>
+                                    <option value="3">⚽</option>
+                                    <option value="4">🏃</option>
+                                    <option value="5">🏀</option>
+                                    <option value="6">🎾</option>
+                                    <option value="7">⚾</option>
+                                </select>  
+                            </div>                  
+                        </form>
+                        <div class="botao-azul-cadastrar d-flex justify-content-end pt-4">
+                            <a href="Modalidades.html">
+                                <button class="btn btn-primary fw-bold">
+                                    Cadastrar
+                                </button>
+                            </a>
                         </div>
-                        <div>
-                            <p>Inscrições</p>
-                            <small>0 Atletas</small>
-                        </div>
-                        <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
-                    </div>
-                    <div class="card border w-100">
-                        <div class="p-2 bg-body-tertiary rounded-top">
-                            <p class="fw-semibold">Inscrições</p>
-                        </div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
                     </div>
                 </section>
             </div>
