Fazendo linkagem entre as páginas e corrigindo pequenos erros

--- a/Esqueci-minha-senha.html
+++ b/Esqueci-minha-senha.html
@@ -61,8 +61,8 @@
                             <input class="w-100" type="email" placeholder="Digite o seu e-mail">
                         </form>
                     </div>
-                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
-                    <a href="index.html" class="">Voltar para o login</a>
+                    <a href="Senha-Feedback.html"><button id='button-form' type="button" class="btn btn-primary fw-bold w-100">Entrar</button></a>
+                    <a href="Tela-de-Login.html">Voltar para o login</a>
                 </div>
             </div>
         </div>
