--- a/Renovar-Feedback.html
+++ b/Renovar-Feedback.html
@@ -44,7 +44,7 @@
                 <div id="informacoes-login" class='col-4 offset-1 d-flex gap-2 flex-column justify-content-center'>
                     <h2 class="border-bottom pb-3 fs-3 fw-bold" id="e-mail">Senha alterada com sucesso</h2>
                     <p>Acesse o link abaixo para acessar o painel do atleta.</p>
-                    <a href="index.html">Voltar ao login</a>
+                    <a href="Tela-de-Login.html">Voltar ao login</a>
                 </div>
             </div>
         </div>
