--- a/Tela-de-Login.html
+++ b/Tela-de-Login.html
@@ -68,7 +68,7 @@
                     <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
                     <div id="cadastrar" class="d-flex justify-content-between w-100">
                         <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
-                        <a href="index2.html">Esqueci minha senha</a>
+                        <a href="Esqueci-minha-senha.html">Esqueci minha senha</a>
                     </div>
                 </div>
             </div>
