--- a/Renovar-Senha.html
+++ b/Renovar-Senha.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,49 +7,54 @@
     <title>Tela de Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
+    
     <section>
         <div class="container">
             <div class="row justify-content-center">
                 <div class='col-5 background'>
-                    <div class="d-flex justify-content-center py-5">
+                    <div class="d-flex justify-content-center pt-5">
                         <img src="assets/img/logo.svg">
                     </div>
                     <div id="bloco-login" class="d-flex align-items-center justify-content-between ps-2 pe-2">
                         <div id="façalogin">
                             <h1 class='pb-3'>Alterar Senha</h1>
                             <div class='barra-azul'></div>
-                            <p>Alteração de senha através do e-mail.</p>
+                            <p>Alteração de senha através de link.</p>
                         </div>
-                        <div id='seta'
-                            class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
+                        <div id='seta' class="d-flex justify-content-center align-items-center bg-dark rounded-circle text-white fs-1">
                             >
                         </div>
                     </div>
                 </div>
-                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-2 flex-column justify-content-center'>
-                    <h2 class="border-bottom pb-3 fs-3 fw-bold" id="e-mail">Link Enviado!</h2>
-                    <p>Enviamos um link no seu e-mail cadastrado para você redefinir a sua senha e acessar a sua conta.
-                    </p>
-                    <a href="index.html">Voltar ao login</a>
+                <div id="informacoes-login" class='col-4 offset-1 d-flex gap-4 flex-column justify-content-center'>
+                    <h2 class="border-bottom pb-3 fs-3 fw-bold mb-0">Nova senha</h2>
+                    <p class='mb-0'>Você deverá registrar uma nova senha para sua conta de atleta na plataforma de esportes da SEMADEC.</p>
+                    <div id="informacao-email">
+                        <p class="fw-bold" id="e-mail">Senha</p>
+                        <form action="get">
+                            <input class="w-100" type="password" placeholder="Digite a sua nova senha">
+                        </form>
+                    </div>
+                    <div id="informacao-senha">
+                        <p class="fw-bold" id="senha">Repetição de senha</p>
+                        <form action="get">
+                            <input class="w-100" type="password" placeholder="Repita a sua nova senha">
+                        </form>
+                    </div>
+                    <a href="Renovar-Feedback.html"><button id='button-form' type="button" class="btn btn-primary fw-bold w-100">Alterar</button></a>
+                    <div>
+                        <a href="Tela-de-Login.html">Voltar ao login</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
 </body>
-
-</html>
+</html> 
