--- a/Dashboard.html
+++ b/Dashboard.html
@@ -38,27 +38,33 @@
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <div class="dashboard d-flex align-items-center gap-2">
-                        <i class="bi bi-house-door hover"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
-                    </div>
-                    <div class="modalidades d-flex align-items-center gap-2">
-                        <i class="bi bi-star hover"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
+                    <a href="Dashboard.html" class="link-underline link-underline-opacity-0">
+                        <div class="dashboard d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-house-door"></i>
+                            Dashboard
+                        </div>
+                    </a>
+                    <div class="modalidades d-flex align-items-center gap-2 hover">
+                        <i class="bi ps-2 bi-star"></i>
+                        Modalidades
                     </div>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out d-flex align-items-center gap-2">
-                        <i class="bi bi-box-arrow-right hover"></i>
-                        <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
-                    </div>
+                    <a href="Tela-de-Login.html"  class='link-danger link-underline link-underline-opacity-0'>
+                        <div class="log-out d-flex align-items-center gap-2">
+                            <i class="bi bi-box-arrow-right hover"></i>
+                            Sair
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
-                <div class="pessoa w-100">
-                    <p class="fw-bold">Jr Programador</p>
-                    <p>Atleta</p>
-                </div>
+                <a href="Perfil.html" class='link-underline link-underline-opacity-0'>
+                    <div class="pessoa w-100">
+                        <p class="fw-bold">Jr Programador</p>
+                        <p>Atleta</p>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="container pt-5 ps-5 ms-5">
