--- a/Perfil-senha.html
+++ b/Perfil-senha.html
@@ -38,27 +38,33 @@
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <div class="dashboard d-flex align-items-center gap-2 hover">
-                        <i class="bi ps-2 bi-house-door"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
-                    </div>
+                    <a href="Dashboard.html" class="link-underline link-underline-opacity-0">
+                        <div class="dashboard d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-house-door"></i>
+                            Dashboard
+                        </div>
+                    </a>
                     <div class="modalidades d-flex align-items-center gap-2 hover">
                         <i class="bi ps-2 bi-star"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
+                        Modalidades
                     </div>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out d-flex align-items-center gap-2 hover">
-                        <i class="bi ps-2 bi-box-arrow-right"></i>
-                        <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
-                    </div>
+                    <a href="Tela-de-Login.html"  class='link-danger link-underline link-underline-opacity-0'>
+                        <div class="log-out d-flex align-items-center gap-2">
+                            <i class="bi bi-box-arrow-right hover"></i>
+                            Sair
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
-                <div class="pessoa">
-                    <p class="fw-bold">Jr Programador</p>
-                    <p>Atleta</p>
-                </div>
+                <a href="Perfil.html" class='link-underline link-underline-opacity-0'>
+                    <div class="pessoa w-100">
+                        <p class="fw-bold">Jr Programador</p>
+                        <p>Atleta</p>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="col-10 mt-2">
@@ -87,7 +93,7 @@
                             <input id="input-t4" class="form-control w-50" placeholder="Reinsira sua nova senha" type="text">
                         </div>
                     </form>
-                    <button id="button" class="btn btn-primary mt-4">Salvar alterações</button>
+                    <a href="Perfil.html"><button id="button" class="btn btn-primary mt-4">Salvar alterações</button></a>
                 </div>
             </div>
         </div>
