Adicionando linkagem e corrigindo pequenos erros

--- a/Cadastrar-modalidade.html
+++ b/Cadastrar-modalidade.html
@@ -38,19 +38,25 @@
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-house-door"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
-                    </div>
-                    <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-star text-primary"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0 link-primary">Modalidades</a>
-                    </div>
+                    <a href="Dashboard.html" class='link-underline link-underline-opacity-0'>
+                        <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-house-door"></i>
+                            Dashboard
+                        </div>
+                    </a>
+                    <a href="#" class='link-underline link-underline-opacity-0 link-primary'>
+                        <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-star text-primary"></i>
+                            <p class='text-primary'>Modalidades</p>
+                        </div>
+                    </a>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-box-arrow-right"></i>
-                        <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
-                    </div>
+                    <a href="Tela-de-Login.html" class="link-danger link-underline link-underline-opacity-0">
+                        <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-box-arrow-right"></i>
+                            Sair
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="profile d-flex gap-2 hover">
@@ -65,7 +71,7 @@
             <div class="container padeiro">
                 <div id="label" class="d-flex flex-column gap-3 mb-2">
                     <div class="bread-crumb d-flex gap-2">
-                        <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
+                        <a id="home" class="link-underline link-underline-opacity-0" href="Modalidades.html">Modalidades</a>
                         <img src="assets/img/icon.svg">
                         <p>Cadastro</p>
                     </div>
