--- a/Detalhes-modalidade.html
+++ b/Detalhes-modalidade.html
@@ -40,19 +40,25 @@
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-house-door"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
-                    </div>
-                    <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-star text-primary"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0 link-primary">Modalidades</a>
-                    </div>
+                    <a href="Dashboard.html" class='link-underline link-underline-opacity-0'>
+                        <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-house-door"></i>
+                            Dashboard
+                        </div>
+                    </a>
+                    <a href="#" class='link-underline link-underline-opacity-0 link-primary'>
+                        <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-star text-primary"></i>
+                            <p class='text-primary'>Modalidades</p>
+                        </div>
+                    </a>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-box-arrow-right"></i>
-                        <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
-                    </div>
+                    <a href="Tela-de-Login.html" class="link-danger link-underline link-underline-opacity-0">
+                        <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-box-arrow-right"></i>
+                            Sair
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="profile d-flex gap-2 hover">
@@ -67,7 +73,7 @@
             <div class="container padeiro">
                 <div id="label" class="d-flex flex-column gap-3 mb-2">
                     <div class="d-flex gap-2">
-                        <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
+                        <a id="home" class="link-underline link-underline-opacity-0" href="Modalidades.html">Modalidades</a>
                         <img src="assets/img/icon.svg">
                         <p>Detalhamento da modalidade</p>
                     </div>
@@ -75,16 +81,16 @@
                 </div>
                 <section class="d-flex gap-3 mt-3">
                     <div id="modal" class="card d-flex flex-column gap-3 border p-2">
-                        <figure class="pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
+                        <figure class="mb-0 pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
                         <div>
-                            <p>Tipo</p>
+                            <p class="fw-bold-600">Tipo</p>
                             <small id="tipo">Individual</small>
                         </div>
                         <div>
-                            <p>Inscrições</p>
+                            <p class="fw-bold-600">Inscrições</p>
                             <small>0 Atletas</small>
                         </div>
-                        <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
+                        <a id="link-card" class="pt-3 border-top" href="Categorias-modalidade.html">Exibir categorias</a>
                     </div>
                     <div class="card border w-100">
                         <div class="p-2 bg-body-tertiary rounded-top">
