--- a/Modalidades.html
+++ b/Modalidades.html
@@ -38,19 +38,25 @@
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-house-door"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
-                    </div>
-                    <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-star text-primary"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0 link-primary">Modalidades</a>
-                    </div>
+                    <a href="Dashboard.html" class='link-underline link-underline-opacity-0'>
+                        <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-house-door"></i>
+                            Dashboard
+                        </div>
+                    </a>
+                    <a href="#" class='link-underline link-underline-opacity-0 link-primary'>
+                        <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-star text-primary"></i>
+                            <p class='text-primary'>Modalidades</p>
+                        </div>
+                    </a>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
-                        <i class="bi bi-box-arrow-right"></i>
-                        <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
-                    </div>
+                    <a href="Tela-de-Login.html" class="link-danger link-underline link-underline-opacity-0">
+                        <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
+                            <i class="bi bi-box-arrow-right"></i>
+                            Sair
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="profile d-flex gap-2 hover">
@@ -76,9 +82,11 @@
                                 <img src="assets/img/x.svg" alt="">
                                 Gerar Relatórios
                             </button>
-                            <button type="button" class='btn btn-primary'>
-                                Cadastrar Modalidade
-                            </button>
+                            <a href="Cadastrar-modalidade.html">
+                                <button type="button" class='btn btn-primary'>
+                                    Cadastrar Modalidade
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +163,7 @@
                             </div>
                             <span class="individual badge badge-pill badge-primary">Individual</span>
                             <p class="participantes">10 participantes</p>
-                            <div class='prancheta hover'><img src="assets/img/prancheta.svg" alt=""></div>
+                            <a href='Detalhes-modalidade.html' class='prancheta hover'><img src="assets/img/prancheta.svg" alt=""></a>
                         </li>
                         <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
