Finalizando merge e linkagem de páginas

--- a/Perfil-senha.html
+++ b/Perfil-senha.html
@@ -44,10 +44,12 @@
                             Dashboard
                         </div>
                     </a>
-                    <div class="modalidades d-flex align-items-center gap-2 hover">
-                        <i class="bi ps-2 bi-star"></i>
-                        Modalidades
-                    </div>
+                    <a href="Modalidades.html" class="link-underline link-underline-opacity-0">
+                        <div class="modalidades d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-star"></i>
+                            Modalidades
+                        </div>
+                    </a>
                     <div class="borda border-bottom"></div>
                     <a href="Tela-de-Login.html"  class='link-danger link-underline link-underline-opacity-0'>
                         <div class="log-out d-flex align-items-center gap-2">
@@ -82,15 +84,15 @@
                         <p>Use o formulário a seguir para alterar a senha.</p>
                         <div>
                             <p>Senha atual:</p>
-                            <input id="input-t4" class="form-control w-50" placeholder="Digite sua senha atual" type="text">
+                            <input id="input-t4" class="form-control w-50" placeholder="Digite sua senha atual" type="password">
                         </div>
                         <div>
                             <p>Nova senha:</p>
-                            <input id="input-t4" class="form-control w-50" placeholder="Digite sua nova senha" type="text">
+                            <input id="input-t4" class="form-control w-50" placeholder="Digite sua nova senha" type="password">
                         </div>
                         <div>
                             <p>Repita a nova senha:</p>
-                            <input id="input-t4" class="form-control w-50" placeholder="Reinsira sua nova senha" type="text">
+                            <input id="input-t4" class="form-control w-50" placeholder="Reinsira sua nova senha" type="password">
                         </div>
                     </form>
                     <a href="Perfil.html"><button id="button" class="btn btn-primary mt-4">Salvar alterações</button></a>
