--- a/Tela-de-Login.html
+++ b/Tela-de-Login.html
@@ -65,7 +65,7 @@
                             <i class="bi bi-eye-slash fs-5"></i>
                         </form>
                     </div>
-                    <button id='button-form' type="button" class="btn btn-primary fw-bold">Entrar</button>
+                    <a href="Dashboard.html"><button id='button-form' type="button" class="btn btn-primary fw-bold w-100">Entrar</button></a>
                     <div id="cadastrar" class="d-flex justify-content-between w-100">
                         <p>Não tem uma conta? <a href="#" class="fw-bold">Cadastrar-se</a></p>
                         <a href="Esqueci-minha-senha.html">Esqueci minha senha</a>
