--- a/Editar-perfil.html
+++ b/Editar-perfil.html
@@ -46,10 +46,12 @@
                             Dashboard
                         </div>
                     </a>
-                    <div class="modalidades d-flex align-items-center gap-2 hover">
-                        <i class="bi ps-2 bi-star"></i>
-                        Modalidades
-                    </div>
+                    <a href="Modalidades.html" class="link-underline link-underline-opacity-0">
+                        <div class="modalidades d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-star"></i>
+                            Modalidades
+                        </div>
+                    </a>
                     <div class="borda border-bottom"></div>
                     <a href="Tela-de-Login.html"  class='link-danger link-underline link-underline-opacity-0'>
                         <div class="log-out d-flex align-items-center gap-2">
