consertando as diferenças que tinham entre cada pagina e deixando um padrão, vale no minimo 100 pontos em cesarmar

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -31,7 +31,7 @@
 
 <body class="h-100">
     <section class="tudo h-100 d-flex gap-5">
-        <div class="me-5 col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+        <div class=" col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
@@ -39,9 +39,10 @@
                 </div>
                 <div class="options d-flex flex-column gap-4">
                     <a href="Dashboard.html" class="link-underline link-underline-opacity-0">
-                        <div class="dashboard d-flex align-items-center gap-2 hover">
-                            <i class="bi ps-2 bi-house-door"></i>
-                            Dashboard
+                        <div class="dashboard bg-body-secondary rounded d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-house-door text-primary"></i>
+            
+                            <p class='text-primary'>Dashboard</p>
                         </div>
                     </a>
                     <a href="Modalidades.html" class="link-underline link-underline-opacity-0">
@@ -69,7 +70,7 @@
                 </a>
             </div>
         </div>
-        <div class="container pt-5 ps-5 ms-5">
+        <div class="container pt-5 ps-5">
             <h5 class="fw-semibold pb-3">Suas inscrições</h5>
             <div class="modalidades d-flex flex-column gap-4">
                 <div class="volei d-flex flex-column gap-4 border border-secondary-subtle rounded p-3">
