--- a/Perfil-senha.html
+++ b/Perfil-senha.html
@@ -29,19 +29,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="h-100 gambiarra">
-    <section class="h-100 row">
-        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+<body class="h-100">
+    <section class="tudo h-100 d-flex gap-5">
+        <div class=" col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
-                    <img src="assets/img/awe-logo.svg">
+                    <img src="assets/img/awe-logo.svg" alt="">
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
                     <a href="Dashboard.html" class="link-underline link-underline-opacity-0">
                         <div class="dashboard d-flex align-items-center gap-2 hover">
-                            <i class="bi ps-2 bi-house-door"></i>
-                            Dashboard
+                            <i class="bi ps-2 bi-house-door "></i>
+            
+                            <p>Dashboard</p>
                         </div>
                     </a>
                     <a href="Modalidades.html" class="link-underline link-underline-opacity-0">
@@ -69,12 +70,12 @@
                 </a>
             </div>
         </div>
-        <div class="col-10 mt-2">
+        <div class="col mt-2">
             <div id="cont-index-4" class="container padeiro">
                 <div>
                     <div id="label" class="d-flex flex-column gap-3">
                         <div class="d-flex gap-2">
-                            <a id="home" class="link-underline link-underline-opacity-0" href="#">Perfil</a>
+                            <a id="home" class="link-underline link-underline-opacity-0" href="Perfil.html">Perfil</a>
                             <img src="assets/img/icon.svg">
                             <p>Alterar Senha</p>
                         </div>
