--- a/Categoria-cadastro.html
+++ b/Categoria-cadastro.html
@@ -26,31 +26,33 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="h-100 gambiarra">
-    <section class="h-100 row">
-        <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
+<body class="h-100">
+    <section class="tudo h-100 d-flex gap-5">
+        <div class=" col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
-                    <img src="assets/img/awe-logo.svg">
+                    <img src="assets/img/awe-logo.svg" alt="">
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <a href="Dashboard.html" class='link-underline link-underline-opacity-0'>
-                        <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
-                            <i class="bi bi-house-door"></i>
-                            Dashboard
+                    <a href="Dashboard.html" class="link-underline link-underline-opacity-0">
+                        <div class="dashboard d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-house-door"></i>
+            
+                            <p>Dashboard</p>
                         </div>
                     </a>
-                    <a href="#" class='link-underline link-underline-opacity-0 link-primary'>
-                        <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
-                            <i class="bi bi-star text-primary"></i>
+                    <a href="Modalidades.html" class="link-underline link-underline-opacity-0">
+                        <div class="modalidades  bg-body-secondary rounded  d-flex align-items-center gap-2 hover">
+                            <i class="bi ps-2 bi-star text-primary"></i>
                             <p class='text-primary'>Modalidades</p>
+                            
                         </div>
                     </a>
                     <div class="borda border-bottom"></div>
-                    <a href="Tela-de-Login.html" class="link-danger link-underline link-underline-opacity-0">
-                        <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
-                            <i class="bi bi-box-arrow-right"></i>
+                    <a href="Tela-de-Login.html"  class='link-danger link-underline link-underline-opacity-0'>
+                        <div class="log-out d-flex align-items-center gap-2">
+                            <i class="bi bi-box-arrow-right hover"></i>
                             Sair
                         </div>
                     </a>
@@ -58,13 +60,15 @@
             </div>
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
-                <div class="pessoa">
-                    <p class='fw-bold'>Jr Programador</p>
-                    <p>Atleta</p>
-                </div>
+                <a href="Perfil.html" class='link-underline link-underline-opacity-0'>
+                    <div class="pessoa w-100">
+                        <p class="fw-bold">Jr Programador</p>
+                        <p>Atleta</p>
+                    </div>
+                </a>
             </div>
         </div>
-        <div class="col-10 mt-2">
+        <div class="col mt-2">
             <div class="container padeiro">
                 <div id="label" class="d-flex flex-column gap-3 mb-2">
                     <div class="d-flex gap-2">
