--- a/Perfil.html
+++ b/Perfil.html
@@ -28,20 +28,20 @@
     <!-- css do projeto -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
-<body class="h-100 gambiarra">
-    <section class="h-100 row">
+<body class="h-100">
+    <section class="tudo h-100 d-flex gap-5">
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
                     <img src="assets/img/awe-logo.svg" alt="">
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
-                <div class=" d-flex flex-column gap-4">
+                <div class="options d-flex flex-column gap-4">
                     <a href="Dashboard.html" class="link-underline link-underline-opacity-0">
                         <div class="dashboard d-flex align-items-center gap-2 hover">
-                            <i class="bi ps-2 bi-house-door"></i>
-                            Dashboard
+                            <i class="bi ps-2 bi-house-door "></i>
+            
+                            <p>Dashboard</p>
                         </div>
                     </a>
                     <a href="Modalidades.html" class="link-underline link-underline-opacity-0">
@@ -61,13 +61,15 @@
             </div>
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
-                <div class="pessoa">
-                    <p class="fw-bold">Jr Programador</p>
-                    <p>Atleta</p>
-                </div>
+                <a href="Perfil.html" class='link-underline link-underline-opacity-0'>
+                    <div class="pessoa w-100">
+                        <p class="fw-bold">Jr Programador</p>
+                        <p>Atleta</p>
+                    </div>
+                </a>
             </div>
         </div>
-        <div class="col-10 mt-2">
+        <div class="col mt-2">
             <div class="container padeiro">
                 <div class='d-flex flex-column gap-5'>
                     <div class='d-flex flex-column border-bottom'>
@@ -136,5 +138,6 @@
         </div>
     </section>
 </body>
+
 
 </html>
